duicontrolpanel (0.12.6~unreleased) unstable; urgency=low

  * Fixes: NB#237302 - Brightness control level

 -- Robert Manner <robert.manner@blumsoft.eu>  Sat, 19 Mar 2011 15:06:16 +0100

duicontrolpanel (0.12.5) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#235033 - Settings: Indonesian translation of
    qtn_sett_main_notifications (Pemberitahuan

  [ Robert Manner ]
  * Fixes: help icon on applet briefview is not inverted

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 16 Mar 2011 16:43:11 +0100

duicontrolpanel (0.12.4) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: NB#234151 - White screen is shown on startup
  * Removes linking to unnecessery libraries
  * Fixes: NB#235605 - Reset settings should have buttons centered
  * Fixes: NB#235602 - Extra step to Sound settings needs to be removed
  * Fixes: NB#235762 - overriding back() in DcpWidget does not help
  * Fixes: NB#236209 - segfault from DcpContentItem::ensureWidgetsAreLayouted
  * Fixes: NB#223777 - segfault from DcpAppletWidget::back

  [ Sandor Pinter ]
  * Fixes: NB#234383 - duicontrolpanel startup triggers gconf update
    that results in 402 bytes written to flash

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 15 Mar 2011 19:35:05 +0100

duicontrolpanel (0.12.3) unstable; urgency=low

  * Fixes: NB#234416 - Controlpanel provides no way to force running an applet
    brief inprocess

 -- Robert Manner <robert.manner@blumsoft.eu>  Tue, 08 Mar 2011 16:49:51 +0100

duicontrolpanel (0.12.2) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixing iconIds
  * Adding Applications/Installations, and Applications/Manage applications categories

  [ Robert Manner ]
  * Fixes: NB#225161 - Incorrect title on dialog when Settings does not
    respond anymore
  * Fixes: NB#228255 - When reopening the settings application from
    launcher, the previous subview is shown
  * Fixes: NB#220633 - T-coil hearing aid is mentioned in settings main
    menu